@@ -17,7 +17,7 @@
 [x] maybe supported different libs for migrations...
     no, tctools are here for that.
 
-[ ] document ENV['TOKYO_TYRANT_LIB'] & _CABINET_
+[ ] document ENV['TOKYO_TYRANT_LIB'] & _CABINET_ / LD_LIBRARY_PATH
 
 [o] unify m/l raise trick for util map/list
 
@@ -26,7 +26,9 @@
 
 [o] drop 'backward compatibility' (post 0.1.14)
 [o] qgram, token, opt inverted index types
-[ ] new query FS conds
+[o] new query FTS conds
+
+[ ] table/delete_keys_with_prefix, use searchout
 
 [ ] first integration of Jeremy's work on Dystopia
 
